2006-11-15  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/pyopenbabel.py: Updated to be consistent, fast, pass
	all unit tests, and to have API documentation in docstrings.

	* scripts/python/testpyopenbabel.py: Added complete coverage unit tests
	for pyopenbabel.py

	* scripts/python/test/*: Removed previous attempts at testing

	* scripts/python/pyopenbabel.txt: Removed previous attempts at
	providing documentation (we now have a wiki, and API documentation)

	* scripts/python/head.sdf: Added small test file, used by
	testpyopenbabel.py

	* scripts/python/pyopenbabelapi.html: Added API documentation for
	pyopenbabel.py, automatically generated using "pydoc -w"


2006-11-09  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/formats/gamessformat.cpp: Gamess output parsing now only gathers
	run information from the input deck rather than gather all and defaults
	from gamess.  we may need to reconsider this in the future or add an
	option for it.

2006-11-08  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/formats/gamessformat.cpp: Bug fixes after further testing.

	* src/formats/gamessformat.cpp: For now keywords are in uppercase.  This
	needs to be decided on by the dev community and will be discussed with
	the gamess developers for gamess-specific keywords.

	* src/formats/ghemicalformat.cpp: Read GAMESS info from the "gamess"
	namespace

	* src/generic.h: Added GetData(const char *s) to OBSetData
	so that you can retrieve data from a const char rather than
	having to instanciate a string.

	* src/formats/gamessformat.cpp: More improvements on reading generic
	computational meta data.  (added runtyp / dfttype / basis).  Also modified
	the location of gamess extra information.  Gamess now stores it's
	information in an OBSetData with attribute "gamess" which is part of the
	molecule.

2006-11-07 Chris Morley <ob@gaseq.co.uk>

	* src/formats/xml/cmlformat.cpp(WriteMolecule): Output new
	namespace URL rather than the old one.
	